Add authorize role in backend